# IoT-hardware

accelerometer/: CMakeLists.txt
accelerometer/components/accelerometer/: CMakeLists.txt  accelerometer.h  accelerometr.c  leds_beep.c
accelerometer/main/: CMakeLists.txt  main.c
buttons/: CMakeLists.txt
buttons/components/buttons/: CMakeLists.txt  buttons.c  buttons.h
buttons/main/: CMakeLists.txt
creative/: CMakeLists.txt
creative/components/accelerometer/: CMakeLists.txt  accelerometer.h  accelerometr.c  leds_beep.c
creative/components/buttons/: buttons.c  buttons.h
creative/components/dht11/: CMakeLists.txt  accelerometer.h  accelerometr.c  buttons.c  buttons.h  dht11.c  dht11.h  oled.c  oled.h
creative/components/oled/: oled.c  oled.h
creative/main/: CMakeLists.txt  accelerometer_task.c  dht_task.c  hardware_creative.h  main.c  oled_task.c  task_accelerometer.c  task_buttons.c  task_dht.c  task_oled.c
creative_final/components/accelerometer/: accelerometr.c
creative_final/components/buttons/: buttons.c  buttons.h
creative_final/components/dht11/: CMakeLists.txt  dht11.c  dht11.h  oled.c  oled.h
creative_final/main/: CMakeLists.txt  main.c
dht11/main/: CMakeLists.txt
leads/: CMakeLists.txt  Makefile
leads/main/: leads.c
oled/components/oled/: oled.c  oled.h
oled/main/: main.c
pwm_dac/main/: main.c
t01/main/: CMakeLists.txt  leads.c
t02/: CMakeLists.txt
t02/main/: CMakeLists.txt
t03/main/: main.c
t04/main/: main.c
t05/main/: uart.c
t06/main/: CMakeLists.txt  speaker.c
uart/main/: CMakeLists.txt
(+6 files in other folders)
